--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   "bundleDependencies": false,
   "deprecated": false,
   "description": "TrakFind Meta Handling",
-   "dependencies": {
-   },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.1.0",
     "@babel/core": "^7.1.0",
@@ -41,7 +40,7 @@
   },
   "files": [
     "dist/source.js",
-    "dist/main.min.js",
+    "dist/main.min.js"
   ],
   "homepage": "https://github.com/informedecommerce/trakfind-meta.git#readme",
   "keywords": [
