--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "trakfind-meta",
-  "main": "dist/main.min.js",
+  "main": "dist/client.min.js",
   "version": "2.0.0-rc.3",
   "homepage": "https://github.com/skwerlzu/tf-meta",
   "authors": [
